<resources>
    <string name="app_name">Chivox</string>

    <string name="test_en_letter">A</string>
    <string name="test_en_word">word</string>
    <string name="test_en_sent">How much does it cost to make a phone call?</string>

    <string name="test_cn_word">好</string>
    <string name="test_cn_words">你好</string>
    <string name="test_cn_idiom">风花雪月</string>
    <string name="test_cn_sent">落霞与孤鹜齐飞，秋水共长天一色</string>


</resources>
