<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="#2196F3"
            android:text="长按开始录音，松开开始评测"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="评测 word "
                android:padding="10dp"
                />


            <Button
                android:id="@+id/btn_english_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="开始"
                />
            <Button
                android:id="@+id/btn_english_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="停止"
                />

            <Button
                android:id="@+id/btn_english_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="取消"
                />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_en_letter"
            android:padding="10dp"
            />

        <com.stepyen.common.widget.TouchButton
            android:id="@+id/btn_english_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="英语字母"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_en_word"
            android:padding="10dp"
            />

        <com.stepyen.common.widget.TouchButton
            android:id="@+id/btn_english_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="英语单词"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/test_en_sent"
            />

        <com.stepyen.common.widget.TouchButton
            android:id="@+id/btn_english_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="英语句子"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cn_word"
            android:padding="10dp"
            />

        <com.stepyen.common.widget.TouchButton
            android:id="@+id/btn_chinese_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="中文单字"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cn_words"
            android:padding="10dp"
            />

        <com.stepyen.common.widget.TouchButton
            android:id="@+id/btn_chinese_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="中文词语"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cn_idiom"
            android:padding="10dp"
            />

        <com.stepyen.common.widget.TouchButton
            android:id="@+id/btn_chinese_idiom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="中文成语"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_cn_sent"
            android:padding="10dp"
            />

        <com.stepyen.common.widget.TouchButton
            android:id="@+id/btn_chinese_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="中文句子"
            />
        <Button
            android:id="@+id/btn_play_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="录音回放"
            />

    </LinearLayout>

</ScrollView>